# NekoCaf-

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  00_实验总览与统一案例说明.docx  README.md  docker-compose.yml  pyproject.toml
app/: data.py  main.py  presenters.py
app/db/: connection.py
app/repositories/: cats.py
app/routes/: helpers.py
app/services/: booking.py  catalog.py  recommendations.py
app/static/: app.css  app.js
app/templates/: home.html  permissions.html  reservation_detail.html  staff.html  store_detail.html  stores.html
docs/: development-path.md
docs/development-evidence/: README.md
docs/foundation/: README.md  artifact-map.docx  project-overview.docx  requirements-baseline.xlsx
docs/lab1/: README.md
docs/lab2/: README.md
nekocafe-course-project/: README.md
nekocafe-course-project/project/: Makefile  README.md  docker-compose.yml  pyproject.toml
nekocafe-course-project/project/docs/adr/: README.md
nekocafe-course-project/project/infra/docker/: reservation.Dockerfile
nekocafe-course-project/project/infra/helm/: README.md
nekocafe-course-project/project/infra/observability/: README.md
nekocafe-course-project/project/libs/: __init__.py
nekocafe-course-project/project/libs/common/: __init__.py  naming.py
nekocafe-course-project/project/nekocafe_course_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
nekocafe-course-project/project/services/: __init__.py
nekocafe-course-project/project/services/member/: app.py
nekocafe-course-project/project/services/reservation/: __init__.py  app.py
nekocafe-course-project/project/tests/unit/: test_lab2_batch1_data.py  test_lab2_batch3_data.py  test_service_apps.py  test_word_style_policy.py
project/: Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: build_foundation_docs.py  build_lab1_docs.py  build_lab2_batch2_docs.py  build_lab2_batch2_drawio.py  build_lab2_docs.py  docx_style_policy.py  lab1_common.py  lab2_batch2_common.py  lab2_common.py
实验一_智能化需求工程与UML建模/: 实验一_任务书.docx
实验三_DevOps流水线与容器化部署/: 实验三_任务书.docx
实验二_软件架构设计与微服务拆分/: 实验二_任务书.docx
实验四_软件质量工程与AI辅助代码审查/: 实验四_任务书.docx
(+334 files in other folders)
