[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nekocafe-course-project"
version = "0.1.0"
description = "Unified monorepo skeleton for the NekoCafe software engineering labs."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "jinja2>=3.1,<4.0",
    "prometheus-client>=0.20,<1.0",
    "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.6,<8.0",
    "hypothesis>=6.100,<7.0",
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
    "Pillow>=10.0,<12.0",
    "python-docx>=1.1,<2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
source = ["app", "libs", "services"]
branch = false

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.coverage.html]
directory = "tests/reports/coverage_html"

[tool.coverage.xml]
output = "tests/reports/coverage.xml"

[tool.setuptools]
packages = [
    "app",
    "app.core",
    "app.db",
    "app.repositories",
    "app.routes",
    "app.routes.api",
    "app.routes.pages",
    "app.services",
    "services",
    "services.member",
    "services.reservation",
    "libs",
    "libs.common",
]

[tool.setuptools.package-data]
app = ["templates/*.html", "static/*", "static/assets/cats/*"]
