[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nekocafe-course-project"
version = "0.1.0"
description = "Unified monorepo skeleton for the NekoCafe software engineering labs."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
    "Pillow>=10.0,<12.0",
    "python-docx>=1.1,<2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
packages = [
    "services",
    "services.member",
    "services.reservation",
    "libs",
    "libs.common",
]
